--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
         }
     },
     "require": {
-        "php": "^7.2.5|^8.0",
-        "illuminate/support": "^6.20.12|^7.30.4|^8.22.1|^9.0|^10.0",
-        "illuminate/config": "^6.20.12|^7.30.4|^8.22.1|^9.0|^10.0",
-        "illuminate/database": "^6.20.12|^7.30.4|^8.22.1|^9.0|^10.0",
-        "illuminate/http": "^6.20.12|^7.30.4|^8.22.1|^9.0|^10.0"
+        "php": ">=8.1",
+        "illuminate/support": "^8.22.1|^9.0|^10.0",
+        "illuminate/config": "^8.22.1|^9.0|^10.0",
+        "illuminate/database": "^8.22.1|^9.0|^10.0",
+        "illuminate/http": "^8.22.1|^9.0|^10.0"
     },
     "extra": {
         "laravel": {
