--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
     ],
     "autoload": {
         "psr-4": {
-            "RodrigoPedra\\LaravelSimpleACL\\": "src/LaravelSimpleACL/"
+            "RodrigoPedra\\LaravelSimpleACL\\": "src/"
         }
     },
     "require": {
-        "php": "^7.2.5|^8.0",
-        "illuminate/support": "^6.20.12|^7.30.4|^8.22.1|^9.0",
-        "illuminate/config": "^6.20.12|^7.30.4|^8.22.1|^9.0",
-        "illuminate/database": "^6.20.12|^7.30.4|^8.22.1|^9.0",
-        "illuminate/http": "^6.20.12|^7.30.4|^8.22.1|^9.0"
+        "php": "^8.1",
+        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/config": "^9.0|^10.0|^11.0",
+        "illuminate/database": "^9.0|^10.0|^11.0",
+        "illuminate/http": "^9.0|^10.0|^11.0"
     },
     "extra": {
         "laravel": {
